# MyGraphicsEngine

./: .gitignore  CMakeLists.txt  compile_shaders.bat
shader_spv/: closeHit.spv  comp.spv  frag.spv  leather.spv  miss.spv  raygen.spv  sampler_frag.spv  sampler_vert.spv  shader.frag  shader.vert  vert.spv
shaders/: closeHit.rchit  fsh.cpp  leather.rchit  miss.rmiss  neuralCore.glsl  particle.comp  rayTracingUtils.glsl  raygen.rgen  sampler.frag  sampler.vert  shader.frag  shader.vert  test.comp  vsh.cpp
src/: RayTracingRenderer.cpp  RayTracingRenderer.h  accelerationStructure.h  basicObjects.h  btfTexture.h  directions.h  gui.h  imgui.ini  main.cpp  neuralResources.cpp  neuralResources.h  output.tga  pipeline.h  renderUtils.cpp  renderUtils.h  renderer.cpp  renderer.h  shaderUtils.cpp  shaderUtils.h  whiteModelPipeline.h
src/btfExamine/: btfExaminer.cpp
src/rtMaterial/: core.cpp  core.h  materialTable.json
